--- a/Registration/templates/summary_template.html
+++ b/Registration/templates/summary_template.html
@@ -56,7 +56,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ملخص النص</title>
+    <title>Summary</title>
     <style>
         @page {
             size: A4;
